--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        minecraft: [ 1.16.5, 1.17.1, 1.18.2, 1.19.2, 1.19.3, 1.19.4, 1.20.1]
+        minecraft: [ 1.16.5, 1.17.1, 1.18.2, 1.19.2, 1.19.3, 1.19.4]
     runs-on: self-hosted
     steps:
       - name: Checkout repository
