--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -26,7 +26,7 @@ sourceSets.main.resources { srcDir "src/generated/resources" }
 dependencies {
 	minecraft "net.minecraftforge:forge:${minecraftVersion}-${buildTools.getForgeVersion()}"
 	annotationProcessor "org.spongepowered:mixin:+:processor"
-	implementation fg.deobf("org.mtr:MTR-forge-${minecraftVersion}:${mtrVersion}")
+	implementation fg.deobf("org.mtr:MTR-forge:${mtrVersion}+${minecraftVersion}")
 }
 
 mixin {
@@ -49,7 +49,7 @@ tasks.register("setupFiles") {
 		outputs.upToDateWhen { false }
 		from "src/main/mods.template.toml"
 		into "src/main/resources/META-INF"
-		filter(ReplaceTokens, tokens: ["minecraft": minecraftVersion, "version": minecraftVersion + "-" + version])
+		filter(ReplaceTokens, tokens: ["minecraft": minecraftVersion, "version": version])
 		rename "(.+).template.toml", "\$1.toml"
 	}
 
