--- a/forge/src/main/mods.template.toml
+++ b/forge/src/main/mods.template.toml
@@ -27,6 +27,6 @@ side = "BOTH"
 [[dependencies.londonunderground]]
 modId = "mtr"
 mandatory = true
-versionRange = "4.0"
+versionRange = "[4.0.0-beta-7,4.1)"
 ordering = "AFTER"
 side = "BOTH"
