--- a/common/src/main/resources/assets/mtr/sounds/london_underground_1992/sound.cfg
+++ b/common/src/main/resources/assets/mtr/sounds/london_underground_1992/sound.cfg
@@ -33,7 +33,7 @@ RegenerationLimit = 0
 
 [Brake]
 # Releasing air brake when travelling below regeneration brake cutoff speed.
-BcReleaseFull =
+BcReleaseFull = airzero.wav
 # Releasing air brake prior to departure.
 BcReleaseHigh = airhigh.wav
 # When the train returned to the depot.
